2007-04-30  Dick Porter  <dick@ximian.com>

	* CriticalHandleZeroOrMinusOneIsInvalid.cs: 
	* CriticalHandleMinusOneIsInvalid.cs: 
	* SafeWaitHandle.cs: 
	* SafeHandleZeroOrMinusOneIsInvalid.cs: 
	* SafeHandleMinusOneIsInvalid.cs: Added ReliabilityContract
	attributes to complete 2.0 profile

2007-01-13  Miguel de Icaza  <miguel@novell.com>

	* Add a few more missing helper classes.

2006-12-11  Miguel de Icaza  <miguel@novell.com>

	* SafeWaitHandle.cs: Add new.

2006-12-10  Miguel de Icaza  <miguel@novell.com>

	* SafeFileHandle.cs: Implement this one.

2006-12-02  Miguel de Icaza  <miguel@novell.com>

	* SafeFileHandle.cs: Remove the IsInvalid method, as that is
	present in the base class.

2006-01-12  Ben Maurer  <bmaurer@andrew.cmu.edu>

	* SafeHandleZeroOrMinusOneIsInvalid.cs: Update to RTM api

	* SafeFileHandle.cs: Update to RTM api

2005-08-10  Zoltan Varga  <vargaz@freemail.hu>

	* SafeFileHandle.cs: Make this inherit from SafeHandleZeroOrMinusOneIsInvalid.

	* SafeHandleZeroOrMinusOneIsInvalid.cs: New file.

2005-01-31  Sebastien Pouliot  <sebastien@ximian.com>

	* SafeFileHandle.cs: Class declaration to allow compiling System.IO
	and System.IO.IsolatedStorage for the NET_2_0 profile.